--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "Blank": "Blank",
+  "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Ready to create an app?": "Ready to create an app?",
   "Start with Ionic": "Start with Ionic",
   "UI Components": "UI Components"
