--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,10 @@
 {
   "Blank": "Blank",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
+  "Logout":"Logout",
   "Ready to create an app?": "Ready to create an app?",
+  "Settings":"Settings",
   "Start with Ionic": "Start with Ionic",
+  "Store":"Store",
   "UI Components": "UI Components"
 }
