--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,11 @@
 {
   "Blank": "Blank",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
+  "Loading":"Loading",
+  "Product not found":"Product not found",
   "Ready to create an app?": "Ready to create an app?",
+  "Results":"Results",
+  "Search":"Search",
   "Start with Ionic": "Start with Ionic",
   "UI Components": "UI Components"
 }
