Added: Select option to select store in settings page(#51fwvt)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,5 +6,6 @@
   "Settings":"Settings",
   "Start with Ionic": "Start with Ionic",
   "Store":"Store",
+  "store name":"store name",
   "UI Components": "UI Components"
 }
