Improved: Code to add internationlization and update to the Search page (#51fwu6)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "Blank": "Blank",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
+  "Enter product sku to search":"Enter product sku to search",
   "Loading":"Loading",
   "Product not found":"Product not found",
   "Ready to create an app?": "Ready to create an app?",
