Implemented Internationalisation and updated indentation(#1wn3fca)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,32 +1,12 @@
 {
-  "Blank": "Blank",
-  "Catalog":"Catalog",
-  "Categories":"Categories",
-  "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
+  "Arrival date":"Arrival date",
   "Color":"Color",
-  "Download orders":"Download orders",
+  "Date":"Date",
   "Facility":"Facility",
-  "Group by":"Group by",
-  "In Stock": "{count} In Stock",
   "Location":"Location",
-  "Last brokered":"Last brokered",
-  "Logout":"Logout",
-  "Orders":"Orders",
-  "Order":"Order",
-  "order created":"order created",
-  "PO arrival date":"PO arrival date",
-  "Product inventory":"Product inventory",
   "Product Store":"Product Store",
-  "Product name":"Product name",
-  "Promise date":"Promise date",
-  "Purchase date":"Purchase date",
-  "Ready to create an app?": "Ready to create an app?",
-  "Settings":"Settings",
-  "Shopify ID":"Shopify ID",
+  "Purchase orders":"Purchase orders",
+  "Show order items":"Show order items",
   "Size":"Size",
-  "Sort":"Sort",
-  "Start with Ionic": "Start with Ionic",
-  "Store":"Store",
-  "store name":"store name",
-  "UI Components":"UI Components"
+  "Sort by":"Sort by"
 }
