Implemented solr query to fetch dataand show in orderFind page (#1x634dq)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,9 +10,11 @@
   "In Stock": "{count} In Stock",
   "Location":"Location",
   "Last brokered":"Last brokered",
+  "Location inventory":"Location inventory",
   "Logout":"Logout",
   "Orders":"Orders",
   "Order":"Order",
+  "Ordered on":"Ordered on",
   "order created":"order created",
   "PO arrival date":"PO arrival date",
   "Product inventory":"Product inventory",
@@ -22,6 +24,8 @@
   "Purchase date":"Purchase date",
   "Ready to create an app?": "Ready to create an app?",
   "Settings":"Settings",
+  "Shipping from":"Shipping from",
+  "Shipping method":"Shipping method",
   "Shopify ID":"Shopify ID",
   "Size":"Size",
   "Sort":"Sort",
