--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,7 @@
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color":"Color",
   "Download orders":"Download orders",
+  "Email":"Email",
   "Facility":"Facility",
   "Group by":"Group by",
   "In Stock": "{count} In Stock",
@@ -16,6 +17,7 @@
   "Order":"Order",
   "Ordered on":"Ordered on",
   "order created":"order created",
+  "Phone Number":"Phone Number",
   "PO arrival date":"PO arrival date",
   "Product inventory":"Product inventory",
   "Product Store":"Product Store",
