Fixed internationalization warnings from code (#1x634cr)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "Auto cancel":"Auto cancel",
   "Blank": "Blank",
   "Catalog":"Catalog",
   "Categories":"Categories",
@@ -6,7 +7,10 @@
   "Color":"Color",
   "Download orders":"Download orders",
   "Email":"Email",
+  "Estimated arrival":"Estimated arrival",
   "Facility":"Facility",
+  "Fulfillment":"Fulfillment",
+  "Full Name":"Full Name",
   "Group by":"Group by",
   "In Stock": "{count} In Stock",
   "Location":"Location",
@@ -14,15 +18,22 @@
   "Location inventory":"Location inventory",
   "Logout":"Logout",
   "Orders":"Orders",
-  "Order":"Order",
+  "Order": "Order",
+  "Order ID": "Order ID",
+  "Order Name":"Order Name",
+  "Order Number": "Order Number",
   "Ordered on":"Ordered on",
   "order created":"order created",
+  "Order detail":"Order detail",
   "Phone Number":"Phone Number",
   "PO arrival date":"PO arrival date",
+  "Pre-order":"Pre-order",
   "Product inventory":"Product inventory",
+  "Products": "Products",
   "Product Store":"Product Store",
   "Product name":"Product name",
   "Promise date":"Promise date",
+  "Purchase Order":"Purchase Order",
   "Purchase date":"Purchase date",
   "Ready to create an app?": "Ready to create an app?",
   "Settings":"Settings",
@@ -34,5 +45,7 @@
   "Start with Ionic": "Start with Ionic",
   "Store":"Store",
   "store name":"store name",
+  "Timeline":"Timeline",
+  "Tracking number":"Tracking number",
   "UI Components":"UI Components"
 }
