Internationalized the static code (#1wn3fnp)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,32 +1,48 @@
 {
+  "Allocations": "Allocations",
+  "All orders": "All orders",
+  "arrival date": "arrival date",
+  "ATP": "ATP",
+  "Back orders": "Back orders",
   "Blank": "Blank",
-  "Catalog":"Catalog",
-  "Categories":"Categories",
+  "Catalog": "Catalog",
+  "Categories": "Categories",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
-  "Color":"Color",
-  "Download orders":"Download orders",
-  "Facility":"Facility",
-  "Group by":"Group by",
+  "Color": "Color",
+  "Download orders": "Download orders",
+  "Edit arrival date": "Edit arrival date",
+  "Edit ordered quantity": "Edit ordered quantity",
+  "Facility": "Facility",
+  "Group by": "Group by",
   "In Stock": "{count} In Stock",
-  "Location":"Location",
-  "Last brokered":"Last brokered",
-  "Logout":"Logout",
-  "Orders":"Orders",
-  "Order":"Order",
-  "order created":"order created",
-  "PO arrival date":"PO arrival date",
-  "Product inventory":"Product inventory",
-  "Product Store":"Product Store",
-  "Product name":"Product name",
-  "Promise date":"Promise date",
-  "Purchase date":"Purchase date",
+  "Items": "Items",
+  "Location": "Location",
+  "Last brokered": "Last brokered",
+  "Logout": "Logout",
+  "orders": "orders",
+  "Orders": "Orders",
+  "Order": "Order",
+  "order created": "order created",
+  "ordered": "ordered",
+  "PO arrival date": "PO arrival date",
+  "Pre orders": "Pre orders",
+  "Product inventory": "Product inventory",
+  "Product Store": "Product Store",
+  "Product name": "Product name",
+  "Promise date": "Promise date",
+  "Purchase date": "Purchase date",
+  "Purchase order detail": "Purchase order detail",
   "Ready to create an app?": "Ready to create an app?",
-  "Settings":"Settings",
-  "Shopify ID":"Shopify ID",
-  "Size":"Size",
-  "Sort":"Sort",
+  "Receive": "Receive",
+  "received": "received",
+  "Settings": "Settings",
+  "Shopify ID": "Shopify ID",
+  "Size": "Size",
+  "Sort": "Sort",
   "Start with Ionic": "Start with Ionic",
-  "Store":"Store",
-  "store name":"store name",
-  "UI Components":"UI Components"
+  "Store": "Store",
+  "store name": "store name",
+  "Timeline": "Timeline",
+  "UI Components": "UI Components",
+  "View orders": "View orders"
 }
