Internationazlized static code (#1wn3fmm)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,7 @@
   "Facility": "Facility",
   "Fulfillment": "Fulfillment",
   "Fulfillment options": "Fulfillment options",
+  "Fulfillment settings": "Fulfillment settings",
   "General information": "General information",
   "Group by": "Group by",
   "In Stock": "{count} In Stock",
@@ -30,6 +31,7 @@
   "Internal ID": "Internal ID",
   "items": "items",
   "Location": "Location",
+  "Location Inventory": "Location Inventory",
   "locations": "locations",
   "Locations": "Locations",
   "Last brokered": "Last brokered",
