Refactored styling and markup throughout the app (#1xx0ebt)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,18 +4,23 @@
   "arrival date": "arrival date",
   "Arrival date": "Arrival date",
   "ATP": "ATP",
+  "Auto cancel": "Auto cancel",
   "Back orders": "Back orders",
   "Allocations": "Allocations",
   "All orders": "All orders",
   "Catalog": "Catalog",
   "Categories": "Categories",
+  "Change fulfillment location": "Change fulfillment location",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
   "Date": "Date",
   "Current QOH": "Current QOH",
   "delivery": "delivery",
+  "Destination": "Destination",
   "Download orders": "Download orders",
+  "Edit address": "Edit address",
   "Edit arrival date": "Edit arrival date",
+  "Edit dates": "Edit dates",
   "Edit ordered stock": "Edit ordered stock",
   "Edit ordered quantity": "Edit ordered quantity",
   "Edit ordered qty": "Edit ordered qty",
@@ -23,6 +28,7 @@
   "Edit threshold": "Edit threshold",
   "Edit quantity on hand": "Edit quantity on hand",
   "Edit qoh": "Edit qoh",
+  "Estimated arrival": "Estimated arrival",
   "Expedited": "Expedited",
   "Facility": "Facility",
   "Fulfillment": "Fulfillment",
@@ -47,25 +53,32 @@
   "On order": "On order",
   "order created": "order created",
   "Order": "Order",
+  "Order detail": "Order detail",
   "ordered": "ordered",
+  "Order ID": "Order ID",
+  "Order Name": "Order Name",
+  "Order Number": "Order Number",
   "orders": "orders",
   "Orders": "Orders",
   "Overwrite": "Overwrite",
   "pickup": "pickup",
   "PO arrival date": "PO arrival date",
+  "Pre-order": "Pre-order",
   "Product inventory": "Product inventory",
   "Product inventory detail": "Product inventory detail",
+  "Products": "Products",
   "Product Store": "Product Store",
   "Product name": "Product name",
   "Promise date": "Promise date",
   "Pre orders": "Pre orders",
   "Purchase date": "Purchase date",
-  "Purchase orders": "Purchase orders",
+  "Purchase order": "Purchase order",
+  "purchase order ATP": "purchase order ATP",
   "Purchase order detail": "Purchase order detail",
+  "Purchase orders": "Purchase orders",
   "Receive": "Receive",
   "received": "received",
   "Search purchase orders and products": "Search purchase orders and products",
-  "purchase order ATP": "purchase order ATP",
   "QOH": "QOH",
   "QTY": "QTY",
   "reduce inventory": "reduce inventory",
@@ -96,6 +109,7 @@
   "Without promise date": "Without promise date",
   "Ready to create an app?": "Ready to create an app?",
   "Timeline": "Timeline",
+  "Tracking number": "Tracking number",
   "variants": "variants",
   "View orders": "View orders"
 }
