Improved styling and markup (#1xx0ebt)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,6 +109,7 @@
   "Without promise date": "Without promise date",
   "Ready to create an app?": "Ready to create an app?",
   "Timeline": "Timeline",
+  "Type": "Type",
   "Tracking number": "Tracking number",
   "variants": "variants",
   "View orders": "View orders"
