Implemented code for instance URL (#1ym28pz)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,6 +48,7 @@
   "Last brokered": "Last brokered",
   "Logs": "Logs",
   "Logout": "Logout",
+  "OMS": "OMS",
   "Open orders": "Open orders",
   "Options": "Options",
   "On order": "On order",
