--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,33 +1,33 @@
 {
   "Add": "Add",
   "Adjust quantity": "Adjust quantity",
-  "arrival date": "arrival date",
+  "All orders": "All orders",
+  "Allocations": "Allocations",
   "Arrival date": "Arrival date",
+  "arrival date": "arrival date",
   "ATP": "ATP",
   "Auto cancel": "Auto cancel",
   "Back orders": "Back orders",
-  "Allocations": "Allocations",
-  "All orders": "All orders",
   "Catalog": "Catalog",
   "Categories": "Categories",
   "Change fulfillment location": "Change fulfillment location",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
-  "Date": "Date",
   "Current QOH": "Current QOH",
+  "Date": "Date",
   "delivery": "delivery",
   "Destination": "Destination",
   "Download orders": "Download orders",
   "Edit address": "Edit address",
   "Edit arrival date": "Edit arrival date",
   "Edit dates": "Edit dates",
-  "Edit ordered stock": "Edit ordered stock",
-  "Edit ordered quantity": "Edit ordered quantity",
   "Edit ordered qty": "Edit ordered qty",
+  "Edit ordered quantity": "Edit ordered quantity",
+  "Edit ordered stock": "Edit ordered stock",
+  "Edit qoh": "Edit qoh",
+  "Edit quantity on hand": "Edit quantity on hand",
   "Edit safety stock": "Edit safety stock",
   "Edit threshold": "Edit threshold",
-  "Edit quantity on hand": "Edit quantity on hand",
-  "Edit qoh": "Edit qoh",
   "Estimated arrival": "Estimated arrival",
   "Expedited": "Expedited",
   "Facility": "Facility",
@@ -39,79 +39,81 @@
   "In Stock": "{count} In Stock",
   "In stock": "In stock",
   "Internal ID": "Internal ID",
-  "items": "items",
   "Items": "Items",
+  "items": "items",
+  "Last brokered": "Last brokered",
   "Location": "Location",
   "Location Inventory": "Location Inventory",
-  "locations": "locations",
+  "Location inventory": "Location inventory",
   "Locations": "Locations",
-  "Last brokered": "Last brokered",
-  "Logs": "Logs",
+  "locations": "locations",
   "Logout": "Logout",
+  "Logs": "Logs",
   "OMS": "OMS",
+  "On order": "On order",
   "Open orders": "Open orders",
   "Options": "Options",
-  "On order": "On order",
-  "order created": "order created",
   "Order": "Order",
+  "order created": "order created",
   "Order detail": "Order detail",
-  "ordered": "ordered",
   "Order ID": "Order ID",
   "Order Name": "Order Name",
   "Order Number": "Order Number",
-  "orders": "orders",
+  "ordered": "ordered",
+  "Ordered on": "Ordered on",
   "Orders": "Orders",
+  "orders": "orders",
   "Overwrite": "Overwrite",
   "pickup": "pickup",
   "PO arrival date": "PO arrival date",
+  "Pre orders": "Pre orders",
   "Pre-order": "Pre-order",
   "Product inventory": "Product inventory",
   "Product inventory detail": "Product inventory detail",
-  "Products": "Products",
-  "Product Store": "Product Store",
   "Product name": "Product name",
+  "Product Store": "Product Store",
+  "Products": "Products",
   "Promise date": "Promise date",
-  "Pre orders": "Pre orders",
   "Purchase date": "Purchase date",
   "Purchase order": "Purchase order",
   "purchase order ATP": "purchase order ATP",
   "Purchase order detail": "Purchase order detail",
   "Purchase orders": "Purchase orders",
-  "Receive": "Receive",
-  "received": "received",
-  "Search purchase orders and products": "Search purchase orders and products",
   "QOH": "QOH",
   "QTY": "QTY",
+  "Ready to create an app?": "Ready to create an app?",
+  "Receive": "Receive",
+  "received": "received",
   "reduce inventory": "reduce inventory",
   "Remove": "Remove",
   "Retail": "Retail",
   "safety stock": "safety stock",
+  "Search purchase orders and products": "Search purchase orders and products",
   "Settings": "Settings",
+  "Shipping from": "Shipping from",
   "Shipping method": "Shipping method",
   "Shopify ID": "Shopify ID",
-  "Show order items": "Show order items",
   "Shopify IDs": "Shopify IDs",
+  "Show order items": "Show order items",
   "Size": "Size",
   "SKU": "SKU",
   "Sort": "Sort",
   "Sort by": "Sort by",
-  "Start with Ionic": "Start with Ionic",
   "Standard": "Standard",
+  "Start with Ionic": "Start with Ionic",
   "Store": "Store",
   "store name": "store name",
   "Store pickup": "Store pickup",
   "threshold consumed": "threshold consumed",
+  "Timeline": "Timeline",
   "Total": "Total",
+  "Tracking number": "Tracking number",
+  "Type": "Type",
   "Unfillable": "Unfillable",
   "UPC": "UPC",
   "Variant": "Variant",
   "View location details": "View location details",
+  "View orders": "View orders",
   "Warehouse": "Warehouse",
-  "Without promise date": "Without promise date",
-  "Ready to create an app?": "Ready to create an app?",
-  "Timeline": "Timeline",
-  "Type": "Type",
-  "Tracking number": "Tracking number",
-  "variants": "variants",
-  "View orders": "View orders"
+  "Without promise date": "Without promise date"
 }
