Created static UI of find shipment page (#1zhjyr7)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -80,6 +80,7 @@
   "Receive": "Receive",
   "received": "received",
   "Search purchase orders and products": "Search purchase orders and products",
+  "Search shipments and products": "Search shipments and products",
   "QOH": "QOH",
   "QTY": "QTY",
   "reduce inventory": "reduce inventory",
@@ -87,9 +88,11 @@
   "Retail": "Retail",
   "safety stock": "safety stock",
   "Settings": "Settings",
+  "Shipments": "Shipments",
   "Shipping method": "Shipping method",
   "Shopify ID": "Shopify ID",
   "Show order items": "Show order items",
+  "Show shipment items": "Show shipment items",
   "Shopify IDs": "Shopify IDs",
   "Size": "Size",
   "SKU": "SKU",
