Created static UI of shipment detail page (#1zhjyt0)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,6 +87,7 @@
   "Retail": "Retail",
   "safety stock": "safety stock",
   "Settings": "Settings",
+  "Shipment detail": "Shipment detail",
   "Shipping method": "Shipping method",
   "Shopify ID": "Shopify ID",
   "Show order items": "Show order items",
