Internationalised static code (#1zhjyt0)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -80,17 +80,19 @@
   "purchase order ATP": "purchase order ATP",
   "Purchase order detail": "Purchase order detail",
   "Purchase orders": "Purchase orders",
-  "Receive": "Receive",
-  "received": "received",
-  "Search purchase orders and products": "Search purchase orders and products",
   "QOH": "QOH",
   "QTY": "QTY",
+  "Receive": "Receive",
+  "received": "received",
   "reduce inventory": "reduce inventory",
   "Remove": "Remove",
   "Retail": "Retail",
   "safety stock": "safety stock",
+  "Search purchase orders and products": "Search purchase orders and products",
   "Settings": "Settings",
+  "Ship from Facility name": "Ship from Facility name",
   "Shipment detail": "Shipment detail",
+  "shipped": "shipped",
   "Shipping method": "Shipping method",
   "Shopify ID": "Shopify ID",
   "Show order items": "Show order items",
