Internationalize static text and imported ionic UI components (#202re98)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,9 @@
   "Change fulfillment location": "Change fulfillment location",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
+  "Connections": "Connections",
   "Date": "Date",
+  "Details": "Details",
   "Current QOH": "Current QOH",
   "delivery": "delivery",
   "Destination": "Destination",
@@ -70,6 +72,7 @@
   "Products": "Products",
   "Product Store": "Product Store",
   "Product name": "Product name",
+  "Profile": "Profile",
   "Promise date": "Promise date",
   "Pre orders": "Pre orders",
   "Purchase date": "Purchase date",
@@ -80,6 +83,8 @@
   "Receive": "Receive",
   "received": "received",
   "Search purchase orders and products": "Search purchase orders and products",
+  "Shops": "Shops",
+  "Staff": "Staff",
   "QOH": "QOH",
   "QTY": "QTY",
   "reduce inventory": "reduce inventory",
@@ -112,6 +117,8 @@
   "Timeline": "Timeline",
   "Type": "Type",
   "Tracking number": "Tracking number",
+  "User": "User",
+  "Users": "Users",
   "variants": "variants",
   "View orders": "View orders"
 }
