Added splitpane menu on settings page (#202re98)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -121,6 +121,7 @@
   "Type": "Type",
   "Tracking number": "Tracking number",
   "User": "User",
+  "User name": "User name",
   "Users": "Users",
   "variants": "variants",
   "View orders": "View orders"
