Created static code of location management (#202refj)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,9 +11,11 @@
   "Catalog": "Catalog",
   "Categories": "Categories",
   "Change fulfillment location": "Change fulfillment location",
+  "Change type": "Change type",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
   "Date": "Date",
+  "Deactivate": "Deactivate",
   "Current QOH": "Current QOH",
   "delivery": "delivery",
   "Destination": "Destination",
@@ -21,6 +23,7 @@
   "Edit address": "Edit address",
   "Edit arrival date": "Edit arrival date",
   "Edit dates": "Edit dates",
+  "Edit external IDs": "Edit external IDs",
   "Edit ordered stock": "Edit ordered stock",
   "Edit ordered quantity": "Edit ordered quantity",
   "Edit ordered qty": "Edit ordered qty",
@@ -48,6 +51,7 @@
   "Last brokered": "Last brokered",
   "Logs": "Logs",
   "Logout": "Logout",
+  "Netsuite": "Netsuite",
   "OMS": "OMS",
   "Open orders": "Open orders",
   "Options": "Options",
@@ -79,8 +83,10 @@
   "Purchase orders": "Purchase orders",
   "Receive": "Receive",
   "received": "received",
+  "Search locations": "Search locations",
   "Search purchase orders and products": "Search purchase orders and products",
   "Search shipments and products": "Search shipments and products",
+  "Shop": "Shop",
   "QOH": "QOH",
   "QTY": "QTY",
   "reduce inventory": "reduce inventory",
@@ -93,6 +99,7 @@
   "Shopify ID": "Shopify ID",
   "Show order items": "Show order items",
   "Show shipment items": "Show shipment items",
+  "Shopify": "Shopify",
   "Shopify IDs": "Shopify IDs",
   "Size": "Size",
   "SKU": "SKU",
