Created static UI of profile management (#202regg)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,6 +31,7 @@
   "Estimated arrival": "Estimated arrival",
   "Expedited": "Expedited",
   "Facility": "Facility",
+  "First name": "First name",
   "Fulfillment": "Fulfillment",
   "Fulfillment options": "Fulfillment options",
   "Fulfillment settings": "Fulfillment settings",
@@ -41,11 +42,13 @@
   "Internal ID": "Internal ID",
   "items": "items",
   "Items": "Items",
+  "Last name": "Last name",
   "Location": "Location",
   "Location Inventory": "Location Inventory",
   "locations": "locations",
   "Locations": "Locations",
   "Last brokered": "Last brokered",
+  "Login": "Login",
   "Logs": "Logs",
   "Logout": "Logout",
   "OMS": "OMS",
@@ -62,6 +65,8 @@
   "orders": "orders",
   "Orders": "Orders",
   "Overwrite": "Overwrite",
+  "password": "password",
+  "Password": "Password",
   "pickup": "pickup",
   "PO arrival date": "PO arrival date",
   "Pre-order": "Pre-order",
@@ -70,6 +75,7 @@
   "Products": "Products",
   "Product Store": "Product Store",
   "Product name": "Product name",
+  "Profile": "Profile",
   "Promise date": "Promise date",
   "Pre orders": "Pre orders",
   "Purchase date": "Purchase date",
@@ -86,6 +92,7 @@
   "reduce inventory": "reduce inventory",
   "Remove": "Remove",
   "Retail": "Retail",
+  "Role": "Role",
   "safety stock": "safety stock",
   "Settings": "Settings",
   "Shipments": "Shipments",
@@ -113,8 +120,10 @@
   "Without promise date": "Without promise date",
   "Ready to create an app?": "Ready to create an app?",
   "Timeline": "Timeline",
+  "Time zone": "Time zone",
   "Type": "Type",
   "Tracking number": "Tracking number",
+  "username": "username",
   "variants": "variants",
   "View orders": "View orders"
 }
