Improved markup and styling (#1zhjyt0)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "Add": "Add",
+  "Add item to order": "Add item to order",
   "Add item to shipment": "Add item to shipment",
   "Adjust quantity": "Adjust quantity",
   "arrival date": "arrival date",
