--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "Activate": "Activate",
   "Add": "Add",
   "Adjust quantity": "Adjust quantity",
   "arrival date": "arrival date",
@@ -13,7 +14,12 @@
   "Change fulfillment location": "Change fulfillment location",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
+  "Contact information": "Contact information",
+  "created": "created",
+  "Create user": "Create user",
   "Date": "Date",
+  "Deactivate": "Deactivate",
+  "Deactivate user": "Deactivate user",
   "Current QOH": "Current QOH",
   "delivery": "delivery",
   "Destination": "Destination",
@@ -28,9 +34,11 @@
   "Edit threshold": "Edit threshold",
   "Edit quantity on hand": "Edit quantity on hand",
   "Edit qoh": "Edit qoh",
+  "Email": "Email",
   "Estimated arrival": "Estimated arrival",
   "Expedited": "Expedited",
   "Facility": "Facility",
+  "First name": "First name",
   "Fulfillment": "Fulfillment",
   "Fulfillment options": "Fulfillment options",
   "Fulfillment settings": "Fulfillment settings",
@@ -41,6 +49,7 @@
   "Internal ID": "Internal ID",
   "items": "items",
   "Items": "Items",
+  "Last name": "Last name",
   "Location": "Location",
   "Location Inventory": "Location Inventory",
   "locations": "locations",
@@ -62,6 +71,7 @@
   "orders": "orders",
   "Orders": "Orders",
   "Overwrite": "Overwrite",
+  "Phone": "Phone",
   "pickup": "pickup",
   "PO arrival date": "PO arrival date",
   "Pre-order": "Pre-order",
@@ -79,17 +89,22 @@
   "Purchase orders": "Purchase orders",
   "Receive": "Receive",
   "received": "received",
+  "Reset password": "Reset password",
   "Search purchase orders and products": "Search purchase orders and products",
   "Search shipments and products": "Search shipments and products",
+  "Search users": "Search users",
   "QOH": "QOH",
   "QTY": "QTY",
   "reduce inventory": "reduce inventory",
   "Remove": "Remove",
   "Retail": "Retail",
+  "Role": "Role",
   "safety stock": "safety stock",
+  "Save": "Save",
   "Settings": "Settings",
   "Shipments": "Shipments",
   "Shipping method": "Shipping method",
+  "Shop": "Shop",
   "Shopify ID": "Shopify ID",
   "Show order items": "Show order items",
   "Show shipment items": "Show shipment items",
@@ -100,6 +115,7 @@
   "Sort by": "Sort by",
   "Start with Ionic": "Start with Ionic",
   "Standard": "Standard",
+  "Status": "Status",
   "Store": "Store",
   "store name": "store name",
   "Store pickup": "Store pickup",
@@ -115,6 +131,7 @@
   "Timeline": "Timeline",
   "Type": "Type",
   "Tracking number": "Tracking number",
+  "Users": "Users",
   "variants": "variants",
   "View orders": "View orders"
 }
