Updated: the static UI as per the figma and added the static text in the locale(#22qhq27)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,8 @@
   "arrival date": "arrival date",
   "ATP": "ATP",
   "Auto cancel": "Auto cancel",
+  "Auto cancel date": "Auto cancel date",
+  "Back order": "Back order",
   "Back orders": "Back orders",
   "Catalog": "Catalog",
   "Categories": "Categories",
@@ -102,12 +104,15 @@
   "Role": "Role",
   "Shops": "Shops",
   "Staff": "Staff",
+  "Status": "Status",
   "safety stock": "safety stock",
   "Search purchase orders and products": "Search purchase orders and products",
   "Search shipments and products": "Search shipments and products",
   "Settings": "Settings",
   "Shipping from": "Shipping from",
   "Ship from Facility name": "Ship from Facility name",
+  "Ship from location": "Ship from location",
+  "Ship from store": "Ship from store",
   "Shipment detail": "Shipment detail",
   "shipped": "shipped",
   "Shipments": "Shipments",
