Improved card title on shipment page(#1zhjyt0)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -98,6 +98,7 @@
   "Search shipments and products": "Search shipments and products",
   "Settings": "Settings",
   "Ship from Facility name": "Ship from Facility name",
+  "Ship to Facility name": "Ship to Facility name",
   "Shipment detail": "Shipment detail",
   "shipped": "shipped",
   "Shipments": "Shipments",
