Updated: the en.json file(#22xecka)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,7 @@
   "Adjust quantity": "Adjust quantity",
   "All orders": "All orders",
   "Allocations": "Allocations",
+  "any": "any",
   "Arrival date": "Arrival date",
   "arrival date": "arrival date",
   "ATP": "ATP",
@@ -59,6 +60,7 @@
   "Location inventory": "Location inventory",
   "Locations": "Locations",
   "locations": "locations",
+  "Loading": "Loading",
   "Login": "Login",
   "Logs": "Logs",
   "Logout": "Logout",
@@ -68,7 +70,7 @@
   "Open orders": "Open orders",
   "Options": "Options",
   "Order": "Order",
-  "order created": "order created",
+  "Order created": "Order created",
   "Order detail": "Order detail",
   "Order ID": "Order ID",
   "Order Name": "Order Name",
