--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -151,6 +151,7 @@
   "Type": "Type",
   "Unfillable": "Unfillable",
   "UPC": "UPC",
+  "Username": "Username",
   "Variant": "Variant",
   "View location details": "View location details",
   "View orders": "View orders",
