Fixed: missing labels on en.json file (#1x695uc).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -159,6 +159,7 @@
   "Without promise date": "Without promise date",
   "Time zone": "Time zone",
   "username": "username",
+  "Username": "Username",
   "User": "User",
   "User name": "User name",
   "Users": "Users",
