Added: missing label on en.json file (#245e5qn).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -152,6 +152,7 @@
   "Type": "Type",
   "Unfillable": "Unfillable",
   "UPC": "UPC",
+  "Username": "Username",
   "Variant": "Variant",
   "View location details": "View location details",
   "View orders": "View orders",
