Implemented: funtionality for location page to select filters and search (#245e5qn).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -46,6 +46,7 @@
   "Expedited": "Expedited",
   "Facility": "Facility",
   "First name": "First name",
+  "Filters": "Filters",
   "Fulfillment": "Fulfillment",
   "Fulfillment options": "Fulfillment options",
   "Fulfillment settings": "Fulfillment settings",
