Improved: code to add missing labels on en.json file (#245e5qn).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -138,6 +138,7 @@
   "Show order items": "Show order items",
   "Size": "Size",
   "SKU": "SKU",
+  "Something went wrong": "Something went wrong",
   "Sort": "Sort",
   "Sort by": "Sort by",
   "Standard": "Standard",
