--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,6 +51,7 @@
   "Fulfillment settings": "Fulfillment settings",
   "General information": "General information",
   "Group by": "Group by",
+  "in stock": "in stock",
   "In Stock": "{count} In Stock",
   "In stock": "In stock",
   "Internal ID": "Internal ID",
@@ -91,6 +92,7 @@
   "PO arrival date": "PO arrival date",
   "Pre orders": "Pre orders",
   "Pre-order": "Pre-order",
+  "Pre Order Management": "Pre Order Management",
   "Product inventory": "Product inventory",
   "Product inventory detail": "Product inventory detail",
   "Product name": "Product name",
@@ -107,6 +109,7 @@
   "QOH": "QOH",
   "QTY": "QTY",
   "Ready to create an app?": "Ready to create an app?",
+  "Rebrokered": "Rebrokered",
   "Receive": "Receive",
   "received": "received",
   "reduce inventory": "reduce inventory",
@@ -117,7 +120,6 @@
   "Save": "Save",
   "Search locations": "Search locations",
   "Shops": "Shops",
-  "Staff": "Staff",
   "Search purchase orders and products": "Search purchase orders and products",
   "Search shipments and products": "Search shipments and products",
   "Search users": "Search users",
@@ -139,13 +141,17 @@
   "SKU": "SKU",
   "Sort": "Sort",
   "Sort by": "Sort by",
+  "Staff": "Staff",
   "Standard": "Standard",
   "Status": "Status",
   "Start with Ionic": "Start with Ionic",
+  "Stock Transfer": "Stock Transfer",
   "Store": "Store",
   "store name": "store name",
   "Store pickup": "Store pickup",
+  "Stuck orders": "Stuck orders",
   "threshold consumed": "threshold consumed",
+  "Threshold Management": "Threshold Management",
   "Timeline": "Timeline",
   "Total": "Total",
   "Tracking number": "Tracking number",
@@ -162,5 +168,6 @@
   "User": "User",
   "User name": "User name",
   "Users": "Users",
-  "variants": "variants"
+  "variants": "variants",
+  "View all": "View all"
 }
