Improved: code to change UI tags so that we can match them with figma (#232z8jk).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,7 @@
   "ATP": "ATP",
   "Auto cancel": "Auto cancel",
   "Back orders": "Back orders",
+  "Back-order": "Back-order",
   "Catalog": "Catalog",
   "Categories": "Categories",
   "Change fulfillment location": "Change fulfillment location",
@@ -64,7 +65,6 @@
   "Location inventory": "Location inventory",
   "Locations": "Locations",
   "locations": "locations",
-  "Loading": "Loading",
   "Login": "Login",
   "Logs": "Logs",
   "Logout": "Logout",
@@ -74,7 +74,6 @@
   "Open orders": "Open orders",
   "Options": "Options",
   "Order": "Order",
-  "order created": "order created",
   "Order detail": "Order detail",
   "Order ID": "Order ID",
   "Order Name": "Order Name",
@@ -99,7 +98,7 @@
   "Products": "Products",
   "Profile": "Profile",
   "Promise date": "Promise date",
-  "Purchase date": "Purchase date",
+  "Child categories": "Child categories",
   "Purchase order": "Purchase order",
   "purchase order ATP": "purchase order ATP",
   "Purchase order detail": "Purchase order detail",
@@ -146,6 +145,7 @@
   "Store": "Store",
   "store name": "store name",
   "Store pickup": "Store pickup",
+  "Tags": "Tags",
   "threshold consumed": "threshold consumed",
   "Timeline": "Timeline",
   "Total": "Total",
