Improved: code to arrange lable on en.json file (#232z8jk).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,6 +16,7 @@
   "Categories": "Categories",
   "Change fulfillment location": "Change fulfillment location",
   "Change type": "Change type",
+  "Child categories": "Child categories",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
   "Connections": "Connections",
@@ -60,10 +61,10 @@
   "items": "items",
   "Last brokered": "Last brokered",
   "Last name": "Last name",
-  "Loading": "Loading",
   "Location": "Location",
   "Location Inventory": "Location Inventory",
   "Location inventory": "Location inventory",
+  "Loading": "Loading",
   "Locations": "Locations",
   "locations": "locations",
   "Login": "Login",
@@ -73,6 +74,7 @@
   "OMS": "OMS",
   "On order": "On order",
   "Open orders": "Open orders",
+  "order created": "order created",
   "Options": "Options",
   "Order": "Order",
   "Order detail": "Order detail",
@@ -100,7 +102,7 @@
   "Products": "Products",
   "Profile": "Profile",
   "Promise date": "Promise date",
-  "Child categories": "Child categories",
+  "Purchase date": "Purchase date",
   "Purchase order": "Purchase order",
   "purchase order ATP": "purchase order ATP",
   "Purchase order detail": "Purchase order detail",
