--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,6 +17,7 @@
   "Change type": "Change type",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
+  "Company ATP": "Company ATP",
   "Connections": "Connections",
   "Contact information": "Contact information",
   "created": "created",
