Implemented: functionality to sort orders on the basis of date and added option to show or hide the order items(#270yrt1)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -85,6 +85,7 @@
   "Ordered on": "Ordered on",
   "Orders": "Orders",
   "orders": "orders",
+  "Order date": "Order date",
   "Overwrite": "Overwrite",
   "Phone": "Phone",
   "password": "password",
@@ -100,7 +101,7 @@
   "Product Store": "Product Store",
   "Products": "Products",
   "Profile": "Profile",
-  "Promise date": "Promise date",
+  "Promised date": "Promised date",
   "Purchase date": "Purchase date",
   "Purchase order": "Purchase order",
   "purchase order ATP": "purchase order ATP",
