Improved: code to make filters functional on mobile screen (#232z8jk).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,6 +47,7 @@
   "Estimated arrival": "Estimated arrival",
   "Expedited": "Expedited",
   "Facility": "Facility",
+  "Filters": "Filters",
   "First name": "First name",
   "Fulfillment": "Fulfillment",
   "Fulfillment options": "Fulfillment options",
