Improved: code to modify mutation and undo the tag filters for this PR (#232z8jk).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -101,6 +101,7 @@
   "Product name": "Product name",
   "Product Store": "Product Store",
   "Products": "Products",
+  "Products not found": "Products not found",
   "Profile": "Profile",
   "Promise date": "Promise date",
   "Purchase date": "Purchase date",
