Implemented: functionality to show/hide variants on the product list page(#276nuj5)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,7 +53,6 @@
   "Fulfillment options": "Fulfillment options",
   "Fulfillment settings": "Fulfillment settings",
   "General information": "General information",
-  "Group by": "Group by",
   "in stock": "in stock",
   "In Stock": "{count} In Stock",
   "In stock": "In stock",
@@ -141,6 +140,7 @@
   "Show shipment items": "Show shipment items",
   "Shopify IDs": "Shopify IDs",
   "Show order items": "Show order items",
+  "Show variants": "Show variants",
   "Size": "Size",
   "SKU": "SKU",
   "Sort": "Sort",
