Revert "Merge branch 'main' of https://github.com/hotwax/commerce-hub into #1x695h8"
This reverts commit 3653e4fbe5999de01fa0594f959e096772043de6, reversing
changes made to f56c169f556acae3af6ee209c443010edd8fd048.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,7 +54,6 @@
   "Fulfillment settings": "Fulfillment settings",
   "General information": "General information",
   "Group by": "Group by",
-  "in stock": "in stock",
   "In Stock": "{count} In Stock",
   "In stock": "In stock",
   "Internal ID": "Internal ID",
@@ -62,7 +61,6 @@
   "items": "items",
   "Last brokered": "Last brokered",
   "Last name": "Last name",
-  "Loading": "Loading",
   "Location": "Location",
   "Location Inventory": "Location Inventory",
   "Location inventory": "Location inventory",
@@ -96,7 +94,6 @@
   "PO arrival date": "PO arrival date",
   "Pre orders": "Pre orders",
   "Pre-order": "Pre-order",
-  "Pre Order Management": "Pre Order Management",
   "Product inventory": "Product inventory",
   "Product inventory detail": "Product inventory detail",
   "Product name": "Product name",
@@ -113,7 +110,6 @@
   "QOH": "QOH",
   "QTY": "QTY",
   "Ready to create an app?": "Ready to create an app?",
-  "Rebrokered": "Rebrokered",
   "Receive": "Receive",
   "received": "received",
   "reduce inventory": "reduce inventory",
@@ -124,6 +120,7 @@
   "Save": "Save",
   "Search locations": "Search locations",
   "Shops": "Shops",
+  "Staff": "Staff",
   "Search purchase orders and products": "Search purchase orders and products",
   "Search shipments and products": "Search shipments and products",
   "Search users": "Search users",
@@ -147,24 +144,19 @@
   "SKU": "SKU",
   "Sort": "Sort",
   "Sort by": "Sort by",
-  "Staff": "Staff",
   "Standard": "Standard",
   "Status": "Status",
   "Start with Ionic": "Start with Ionic",
-  "Stock Transfer": "Stock Transfer",
   "Store": "Store",
   "store name": "store name",
   "Store pickup": "Store pickup",
-  "Stuck orders": "Stuck orders",
   "threshold consumed": "threshold consumed",
-  "Threshold Management": "Threshold Management",
   "Timeline": "Timeline",
   "Total": "Total",
   "Tracking number": "Tracking number",
   "Type": "Type",
   "Unfillable": "Unfillable",
   "UPC": "UPC",
-  "Username": "Username",
   "Variant": "Variant",
   "View location details": "View location details",
   "View orders": "View orders",
@@ -175,6 +167,5 @@
   "User": "User",
   "User name": "User name",
   "Users": "Users",
-  "variants": "variants",
-  "View all": "View all"
+  "variants": "variants"
 }
