Improved: code to add deleted label (#232z8gw).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,6 +59,7 @@
   "items": "items",
   "Last brokered": "Last brokered",
   "Last name": "Last name",
+  "Loading": "Loading",
   "Location": "Location",
   "Location Inventory": "Location Inventory",
   "Location inventory": "Location inventory",
