Internationalize result text(#27xhv5k)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -118,6 +118,7 @@
   "received": "received",
   "reduce inventory": "reduce inventory",
   "Remove": "Remove",
+  "Results": "Results",
   "Retail": "Retail",
   "Role": "Role",
   "safety stock": "safety stock",
