--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,6 +48,7 @@
   "Estimated arrival": "Estimated arrival",
   "Expedited": "Expedited",
   "Facility": "Facility",
+  "Filters": "Filters",
   "First name": "First name",
   "Fulfillment": "Fulfillment",
   "Fulfillment options": "Fulfillment options",
