Implemented code for static UI of fulfillment location modal(#28379x8)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -124,11 +124,12 @@
   "Role": "Role",
   "safety stock": "safety stock",
   "Save": "Save",
+  "Search facilities": "Search facilities",
   "Search locations": "Search locations",
-  "Shops": "Shops",
   "Search purchase orders and products": "Search purchase orders and products",
   "Search shipments and products": "Search shipments and products",
   "Search users": "Search users",
+  "Send to brokering queue": "Send to brokering queue",
   "Settings": "Settings",
   "Shipping from": "Shipping from",
   "Ship from Facility name": "Ship from Facility name",
@@ -140,6 +141,7 @@
   "Shipments": "Shipments",
   "Shipping method": "Shipping method",
   "Shop": "Shop",
+  "Shops": "Shops",
   "Shopify": "Shopify",
   "Shopify ID": "Shopify ID",
   "Show shipment items": "Show shipment items",
@@ -161,23 +163,22 @@
   "threshold consumed": "threshold consumed",
   "Threshold Management": "Threshold Management",
   "Timeline": "Timeline",
+  "Time zone": "Time zone",
   "Total": "Total",
   "Tracking number": "Tracking number",
   "Type": "Type",
   "Unfillable": "Unfillable",
   "UPC": "UPC",
-  "Username": "Username",
-  "Variant": "Variant",
-  "View location details": "View location details",
-  "View orders": "View orders",
-  "Warehouse": "Warehouse",
-  "Without promise date": "Without promise date",
-  "Time zone": "Time zone",
   "username": "username",
   "Username": "Username",
   "User": "User",
   "User name": "User name",
   "Users": "Users",
   "variants": "variants",
-  "View all": "View all"
+  "Variant": "Variant",
+  "View all": "View all",
+  "View location details": "View location details",
+  "View orders": "View orders",
+  "Warehouse": "Warehouse",
+  "Without promise date": "Without promise date"
 }
