Updated: code to display different information on the basis of different conditions(#27xkwwd)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -89,6 +89,7 @@
   "orders": "orders",
   "Order date": "Order date",
   "Overwrite": "Overwrite",
+  "Parking": "Parking",
   "Phone": "Phone",
   "password": "password",
   "Password": "Password",
@@ -104,6 +105,7 @@
   "Product Store": "Product Store",
   "Products": "Products",
   "Profile": "Profile",
+  "Promise date": "Promise date",
   "Promised date": "Promised date",
   "Purchase date": "Purchase date",
   "Purchase order": "Purchase order",
