Implemented code for static UI of location details page and hide fulfillment segnment on mobile view of product inventory page(#283972h)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,7 @@
   "Details": "Details",
   "Current QOH": "Current QOH",
   "delivery": "delivery",
+  "Delivery": "Delivery",
   "Destination": "Destination",
   "Download orders": "Download orders",
   "Edit address": "Edit address",
@@ -65,6 +66,7 @@
   "Last name": "Last name",
   "Loading": "Loading",
   "Location": "Location",
+  "Location details": "Location details",
   "Location Inventory": "Location Inventory",
   "Location inventory": "Location inventory",
   "Locations": "Locations",
@@ -93,6 +95,7 @@
   "password": "password",
   "Password": "Password",
   "pickup": "pickup",
+  "Pick up": "Pick up",
   "PO": "PO",
   "PO arrival date": "PO arrival date",
   "Pre orders": "Pre orders",
@@ -105,9 +108,11 @@
   "Products": "Products",
   "Profile": "Profile",
   "Promised date": "Promised date",
+  "Publish ATP": "Publish ATP",
   "Purchase date": "Purchase date",
   "Purchase order": "Purchase order",
   "purchase order ATP": "purchase order ATP",
+  "Purchase order ATP": "Purchase order ATP",
   "Purchase order detail": "Purchase order detail",
   "Purchase orders": "Purchase orders",
   "Reset password": "Reset password",
@@ -123,6 +128,7 @@
   "Retail": "Retail",
   "Role": "Role",
   "safety stock": "safety stock",
+  "Safety stock": "Safety stock",
   "Save": "Save",
   "Search locations": "Search locations",
   "Shops": "Shops",
@@ -158,6 +164,7 @@
   "store name": "store name",
   "Store pickup": "Store pickup",
   "Stuck orders": "Stuck orders",
+  "Threshold": "Threshold",
   "threshold consumed": "threshold consumed",
   "Threshold Management": "Threshold Management",
   "Timeline": "Timeline",
