--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -139,6 +139,7 @@
   "Ship to Facility name": "Ship to Facility name",
   "Shipment detail": "Shipment detail",
   "shipped": "shipped",
+  "Shipped from": "Shipped from",
   "Shipments": "Shipments",
   "Shipping method": "Shipping method",
   "Shop": "Shop",
@@ -164,6 +165,7 @@
   "Threshold Management": "Threshold Management",
   "Timeline": "Timeline",
   "Total": "Total",
+  "Tracking code": "Tracking code",
   "Tracking number": "Tracking number",
   "Type": "Type",
   "Unfillable": "Unfillable",
