Implemented: logic to group order items based upon ship group (#27xkgcy)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -89,6 +89,7 @@
   "orders": "orders",
   "Order date": "Order date",
   "Overwrite": "Overwrite",
+  "Packaging": "Packaging",
   "Parking": "Parking",
   "Phone": "Phone",
   "password": "password",
