Created pre build queries for home page dashboard(#1x695h8-updated)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,8 +78,10 @@
   "Open orders": "Open orders",
   "Options": "Options",
   "Order": "Order",
+  "order placed date": "order placed date",
   "Order created": "Order created",
   "Order detail": "Order detail",
+  "Old expedited orders": "Old expedited orders",
   "Order ID": "Order ID",
   "Order Name": "Order Name",
   "Order Number": "Order Number",
