Internationalised static text(#1x695h8-updated)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -164,6 +164,7 @@
   "Store pickup": "Store pickup",
   "Stuck orders": "Stuck orders",
   "threshold consumed": "threshold consumed",
+  "times": "times",
   "Threshold Management": "Threshold Management",
   "Timeline": "Timeline",
   "Total": "Total",
@@ -172,7 +173,6 @@
   "Type": "Type",
   "Unfillable": "Unfillable",
   "UPC": "UPC",
-  "Username": "Username",
   "Variant": "Variant",
   "View location details": "View location details",
   "View orders": "View orders",
