Improved: code to define a popover for selecting product store id when running sync job and fetched shopify config id for selected store(#28ejub5)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -106,6 +106,7 @@
   "Product inventory detail": "Product inventory detail",
   "Product name": "Product name",
   "Product Store": "Product Store",
+  "Product Store Id": "Product Store Id",
   "Products": "Products",
   "Profile": "Profile",
   "Promise date": "Promise date",
